[workspace]
resolver = "2"
members = [
	"lix/lix-doc",
	"lix/lix-rs",
	"tools/licxxbridge",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
clap = "4"
regex = "1.12.4"
rootcause = "0.13.0"
rustyline = "18"
rustyline-derive = "0.12"
syn = "2.0"
# post-0.10 with some very nice features and fixes
zngur = { git = "https://github.com/hkalbasi/zngur.git", rev = "d99315122cfc3d3337159197c304e66009675247" }
pkg-config = "0.3.33"

[profile.dev]
opt-level = 1

[profile.release]
debug = "full"
debug-assertions = true
overflow-checks = true
